test/tests/compiler/18_structures/invalid_types/extra_credit/union_type_declarations/duplicate_union_def.plx
#  YOu can't declare the same union type twice. 

pub fn main(none) i32 {
    type union u(a: i32
        )
    
    type union u(a: i32)
     #  illegal - duplicate declaration
    return 0
}
